multilingual intro version

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,10 @@
   </head>
   <body>
     <div id="app">
+      <div id="intro_container">
+        <h1>CodexGPT</h1>
+        <h2 id="intro_text">Welcome to CodexGPT, your coding AI!</h2>
+      </div>
       <div id="chat_container">
       </div>
       <form>
