--- a/client/index.html
+++ b/client/index.html
@@ -6,13 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CodexGPT - Your Coding AI</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://api.fontshare.com/v2/css?f[]=satoshi@1,900,700,500,300,400&display=swap" rel="stylesheet"/>
   </head>
   <body>
     <div id="app">
       <div id="intro_container">
+        <nav>
+          <div class="navbar">
+            <img src="/assets/ProfileTropical.png" alt="rafa_logo" class="logo" />
+            <button type="button" id="githubBtn" class="black_btn">
+              GitHub
+            </button>
+          </div>
+        </nav>
         <h1>CodexGPT</h1>
         <h2 id="intro_text">Welcome to CodexGPT, your coding AI!</h2>
-      </div>
+    </div>
       <div id="chat_container">
       </div>
       <form>
