new title and disclaimer added

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CodexGPT - Your Coding AI</title>
+    <title>CodeLoboGPT - Your Coding AI</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://api.fontshare.com/v2/css?f[]=satoshi@1,900,700,500,300,400&display=swap" rel="stylesheet"/>
   </head>
@@ -19,15 +19,16 @@
             </button>
           </div>
         </nav>
-        <h1>CodexGPT</h1>
-        <h2 id="intro_text">Welcome to CodexGPT, your coding AI!</h2>
+        <h1>CodeLoboGPT</h1>
+        <h2 id="intro_text">Welcome to CodeLoboGPT, your coding AI!</h2>
     </div>
       <div id="chat_container">
       </div>
       <form>
-        <textarea name="prompt" rows="1" cols="1" placeholder="Ask CodexGPT..."></textarea>
+        <textarea name="prompt" rows="1" cols="1" placeholder="Ask CodeLoboGPT..."></textarea>
         <button type="submit"><img src="assets/send.svg" /></button>
       </form>
+      <p class="disclaimer">CodeLobo by Vizt Nivlir. May produce inaccurate or outdated information, just saying.</p>
     </div>
 
     <script type="module" src="/script.js"></script>
